kstars/skycomponents/skymapcomposite.cpp
@@ -473,14 +473,22 @@ void SkyMapComposite::removeCustomCatalog( const QString &name ) {
 }
 
 void SkyMapComposite::reloadCLines( ) {
+    Q_ASSERT( !SkyMapDrawAbstract::drawLock() );
+    SkyMapDrawAbstract::setDrawLock( true ); // This is not (yet) multithreaded, so I think we don't have to worry about overwriting the state of an existing lock --asimha
     delete m_CLines;
+    m_CLines = 0;
     m_CLines = new ConstellationLines( this, m_Cultures );
+    SkyMapDrawAbstract::setDrawLock( false );
 }
 
 void SkyMapComposite::reloadCNames( ) {
+    Q_ASSERT( !SkyMapDrawAbstract::drawLock() );
+    SkyMapDrawAbstract::setDrawLock( true ); // This is not (yet) multithreaded, so I think we don't have to worry about overwriting the state of an existing lock --asimha
     objectNames(SkyObject::CONSTELLATION).clear();
     delete m_CNames;
+    m_CNames = 0;
     m_CNames = new ConstellationNamesComponent( this, m_Cultures );
+    SkyMapDrawAbstract::setDrawLock( false );
 }
 
 bool SkyMapComposite::isLocalCNames() {
